--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,6 @@ body {
     width: 80%;
     margin: auto;
     padding: 20px;
-    background-color: #ffffff;
-    border-radius: 10px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   }
   
   h1 {
@@ -28,7 +25,7 @@ body {
   }
   
   .input-container {
-    margin: 10px 0;
+    margin: 10px 10px;
   }
   
   label {
@@ -77,24 +74,30 @@ body {
     margin-top: 30px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
+  }
+  
+
+  .plot-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
   }
   
   .plot {
-    width: calc(50% - 20px);
+    /* width: %; */
     margin: 10px 0;
     background-color: #fff;
     border: 1px solid #ddd;
     padding: 20px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
+    margin-bottom: 20px; /* Space between plots */
   }
   
   .plot h3 {
     margin-top: 0;
-    font-size: 20px;
-    color: #333;
   }
+  
   
   .canvas-container {
     text-align: center;
@@ -105,9 +108,4 @@ body {
     margin: 10px 0; /* Adds vertical spacing between the two canvases */
   }
   
-  @media (max-width: 768px) {
-    .plot {
-      width: 100%;
-    }
-  }
   
